fix(header): prevent text wrapping in logo styles

--- a/projects/stream-manager/src/components/header/header.scss
+++ b/projects/stream-manager/src/components/header/header.scss
@@ -92,4 +92,5 @@
 	font-size: rem(14px);
 	text-transform: uppercase;
 	font-weight: 700;
+	white-space: nowrap;
 }
